--- a/templates/niveisEnsino.html
+++ b/templates/niveisEnsino.html
@@ -91,8 +91,8 @@
                 <a href="https://www.faculdadecci.com.br/">
                     <div
                         class="hover-zoom img-fluid align-items-center justify-content-center text-center justify-content-center">
-                        <img src="{{ url_for('static', filename='../static/img/FACULDADE.png') }}" class="w-100"
-                            style="height:500px; width:200px;">
+                        <img src="https://docs.google.com/uc?id=1cVDorck6rGIY6gUbPGsor-jS7JW--H9O" class="w-100"
+                            style="height:500px; width:200px;"> 
                     </div>
                     <blockquote class="blockquote fixed-bottom position-absolute titufac">
                         <p class="text">FACULDADE</p>
