--- a/templates/base.html
+++ b/templates/base.html
@@ -42,7 +42,7 @@
 </head>
 
 
-<body style="background-image: url( {{url_for('static', filename='../static/img/back.jpg') }} )">
+<body style="background-image: url( {{url_for('static', filename='../static/img/bngc.jpg') }} )">
     <header class="mb-5" style="margin-bottom: 0px; padding-bottom:0px;">
 
         <div class="p-3 text-center text-dark" style="background-color: white;">
