--- a/templates/base.html
+++ b/templates/base.html
@@ -52,6 +52,7 @@
                         <a href="{{url_for('home')}}" class="ms-md-2">
                             <img src="{{ url_for('static', filename='../static/img/logo_cci-removebg-preview.png') }}" height="35" />
                         </a>
+                        <button type="button" class="btn btn-primary btn-rounded btn-sm" style="margin-left:90px; max-height: 40px; max-width: 200px;">Pré Matricula</button>
                     </div>
 
                     <div class="col-md-4">
