--- a/templates/base.html
+++ b/templates/base.html
@@ -49,7 +49,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-4 d-flex justify-content-center justify-content-md-start mb-3 mb-md-0">
-                        <a href="{{url_for('home')}}" class="ms-md-2">
+                        <a href="{{url_for('home')}}#topo" class="ms-md-2">
                             <img src="{{ url_for('static', filename='../static/img/logo_cci-removebg-preview.png') }}" height="35" />
                         </a>
                         <button type="button" class="btn btn-primary btn-rounded btn-sm" style="margin-left:90px; max-height: 40px; max-width: 200px;">Pré Matricula</button>
