--- a/templates/base.html
+++ b/templates/base.html
@@ -126,7 +126,7 @@
     <!-- Footer -->
 
     <div class="text-center">
-    <a class="btn btn-primary" href="#topo" style="scroll-behavior: smooth; " >Topo <i class="fas fa-arrow-up"></i></a>
+    <a class="btn btn-primary btn-sm" href="#topo" style="scroll-behavior: smooth; " >Topo <i class="fas fa-arrow-up"></i></a>
     <footer class="text-center text-lg-start bg-white text-muted" style="margin-bottom: 0px;">
     </div>
         <!-- Section: Social media -->
