--- a/templates/institucional.html
+++ b/templates/institucional.html
@@ -9,6 +9,7 @@
     <a class="btn btn-primary" style="margin-top: 15px; margin-left: 15px;" href="{{url_for('missao')}}" role="button">Missão</a>
     <a class="btn btn-primary" style="margin-top: 15px; margin-left: 15px" href="{{url_for('principios')}}" role="button">Princípios</a>
     <a class="btn btn-primary" style="margin-top: 15px; margin-left: 15px" href="{{url_for('regimento')}}" role="button">Regimento</a>
+    <a class="btn btn-primary" style="margin-top: 15px; margin-left: 15px" href="{{url_for('biblioteca')}}" role="button">Biblioteca</a>
   </p>
 
 </div>
@@ -56,6 +57,7 @@
 							superior e às melhores posições no mundo profissional.
 						</p>
 					</div>
+					<a href="{{url_for('missao')}}" class="stretched-link"></a>
 				</div>
 			</div>
 			<div class="col">
@@ -70,6 +72,7 @@
 							Inovação, Transparência, Aprendizagem Intercultural, Princípios Cristãos.
 						</p>
 					</div>
+					<a href="{{url_for('projeto')}}" class="stretched-link"></a>
 				</div>
 			</div>
 			<div class="col">
@@ -84,6 +87,7 @@
 							conciliem a inovação e a tradição.
 						</p>
 					</div>
+					<a href="{{url_for('principios')}}" class="stretched-link"></a>
 				</div>
 			</div>
 		</div>
