--- a/templates/secretaria.html
+++ b/templates/secretaria.html
@@ -63,9 +63,10 @@
     <div class="card h-100" style="max-width:250px; max-height:300px; margin:auto;">
       <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/042.webp" class="card-img-top" alt="Palm Springs Road"/>
       <div class="card-body">
-        <h5 class="card-title text-center" style="">Pré matrícula</h5>
-        <p class="card-text text-center">Pré matricula de alunos</p>
+        <h5 class="card-title text-center" >Transportes</h5>
+        <p class="card-text text-center">Transportes Escolar 2023</p>
       </div>
+      <a href="{{url_for('transportes')}}" class="stretched-link"></a>
     </div>
   </div>
   <div class="col">
