--- a/templates/transportes.html
+++ b/templates/transportes.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 {% block conteudo %}
 
-<p class="fs-1 fw-bold" style="text-align: center; margin-top: 25px;">Relação de Transportadores</p>
+<p class="fs-1 fw-bold" style="text-align: center; margin-top: 25px; margin-right: 10%;">Relação de Transportadores</p>
 
-<p class="text-break" style="margin-left:50px ;">Prezados Senhores Pais, <br>
+<p class="text-break" style="margin-left:50px ; margin-right: 10%;">Prezados Senhores Pais, <br>
 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Segue a lista dos Tios de Transporte Escolar. Pedimos que informem à Secretaria de Atendimento do CCI o nome do tio contratado pelos senhores. Para isso, entrem em contato pelos telefones 3048-8200 / 9.9115-5707 ou pelo E-mail <a href="mailto:secretaria@portalcci.com.br"> secretaria@portalcci.com.br</a>.   </p>
 
