--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -48,6 +48,7 @@
         <h6 class="card-title text-center" style="">Destaques</h6>
         <p class="card-text text-center">Destaques</p>
       </div>
+      <a href="#" class="stretched-link"></a>
     </div>
   </div>
 <div class="col">
@@ -57,6 +58,7 @@
         <h6 class="card-title text-center" style="">Destaques</h6>
         <p class="card-text text-center">Destaques</p>
       </div>
+      <a href="#" class="stretched-link"></a>
     </div>
   </div>
 
@@ -67,6 +69,7 @@
         <h6 class="card-title text-center">Destaques</h6>
         <p class="card-text text-center">Destaques</p>
       </div>
+      <a href="#" class="stretched-link"></a>
   </div>
   </div>
   <div class="col">
@@ -76,6 +79,7 @@
         <h6 class="card-title text-center">Destaques</h6>
         <p class="card-text text-center">Destaques</p>
       </div>
+      <a href="#" class="stretched-link"></a>
   </div>
 
   </div>
@@ -91,6 +95,7 @@
         <h6 class="card-title text-center" style="">Destaques</h6>
         <p class="card-text text-center">Destaques</p>
       </div>
+      <a href="#" class="stretched-link"></a>
     </div>
   </div>
   <div class="col">
@@ -100,6 +105,7 @@
         <h6 class="card-title text-center" >Destaques</h6>
         <p class="card-text text-center">Destaques</p>
       </div>
+      <a href="#" class="stretched-link"></a>
   </div>
   </div>
   <div class="col">
@@ -109,6 +115,7 @@
         <h6 class="card-title text-center">Destaques</h6>
         <p class="card-text text-center">Destaques</p>
       </div>
+      <a href="#" class="stretched-link"></a>
   </div>
   </div>
   <div class="col">
@@ -118,6 +125,7 @@
         <h6 class="card-title text-center" style="">Destaques</h6>
         <p class="card-text text-center">Destaques</p>
       </div>
+      <a href="#" class="stretched-link"></a>
     </div>
   </div>
 
