--- a/templates/base.html
+++ b/templates/base.html
@@ -168,7 +168,7 @@
                 <a href="https://twitter.com/cciccisenior" class="me-4 link-secondary">
                     <i class="fab fa-twitter"></i>
                 </a>
-                <a href="" class="me-4 link-secondary">
+                <a href="https://www.google.com/maps/place/Centro+Educacional+CCI+S%C3%AAnior/@-15.8667267,-48.0977438,17z/data=!4m10!1m2!2m1!1slocais+colegio+cci!3m6!1s0x935bcd5f3659efbb:0xdf20e8a46bd89fd9!8m2!3d-15.8667054!4d-48.0958896!15sChJsb2NhaXMgY29sZWdpbyBjY2laDSILY29sZWdpbyBjY2mSAQ5wcml2YXRlX3NjaG9vbJoBI0NoWkRTVWhOTUc5blMwVkpRMEZuU1VOQ04wNWZlbUpuRUFF4AEA!16s%2Fg%2F1tj1nlrc" class="me-4 link-secondary">
                     <i class="fab fa-google"></i>
                 </a>
                 <a href="https://www.instagram.com/cciccisenior/" class="me-4 link-secondary">
@@ -206,16 +206,16 @@
                             Níveis de ensino
                         </h6>
                         <p>
-                            <a href="#!" class="text-reset">Ensino Infantil</a>
+                            <a href="{{url_for('educacao_infantil')}}" class="text-reset">Ensino Infantil</a>
                         </p>
                         <p>
-                            <a href="#!" class="text-reset">Ensino Fundamental</a>
+                            <a href="{{url_for('ensino_fundamental')}}" class="text-reset">Ensino Fundamental</a>
                         </p>
                         <p>
-                            <a href="#!" class="text-reset">Ensino Médio</a>
+                            <a href="{{url_for('ensino_medio')}}" class="text-reset">Ensino Médio</a>
                         </p>
                         <p>
-                            <a href="#!" class="text-reset">PEC</a>
+                            <a href="https://www.tecscci.com.br/" class="text-reset">Técs</a>
                         </p>
                     </div>
                     <!-- Grid column -->
@@ -283,7 +283,7 @@
     <script type="text/javascript" src="../static/js/mdb.min.js.map"></script>
 
 
-<a class="whatsapp-link" href="#" target="_blank">
+<a class="whatsapp-link" href="https://web.whatsapp.com/send?phone=5561991155707&amp;text=Estou entrando em contato pelo site PortalCCI, podem me retornar por favor?" target="_blank">
     <i class="fab fa-whatsapp"></i>
 </a>
 
