--- a/templates/institucional.html
+++ b/templates/institucional.html
@@ -21,7 +21,7 @@
 <div class="d-flex aling-items-center">
 
 
-    <p class="font-monospace" style="text-align: justify; font-size: 17px; font-style: italic; margin-left: 100px; margin-right: 100px;">
+    <p class="font-monospace" style="text-align: justify; font-size: 17px; font-style: italic; margin-left: 7%; margin-right: 7%;">
 
 
         O CCI foi fundado em 1996 com a implantação gradativa da Educação Infantil e do Ensino Fundamental, pela Sociedade Educativa Braga e Elói Ltda. A iniciativa partiu de um grupo de educadores decididos a promover educação de qualidade e a formar agentes da PAZ e do BEM, por meio de um trabalho voltado para o aperfeiçoamento sociocultural, humano e solidário em ambiente prazeroso.
@@ -46,7 +46,7 @@
 			<div class="col">
 				<div class="card align-items-center" style="width: 18rem;">
 					<img src="../static/img/missao-removebg-preview.png" class="card-img-top" alt="Sunset Over the Sea"
-						style="height: 120px; width: 120px; margin-top: 20px;" />
+						style="height: 120px; width: 120px; margin-top: 20px; margin-bottom: 5%;" />
 					<div class="card-body" style="text-align: center;">
 						<h1>Missão</h1>
 						<p class="card-text">
