--- a/templates/missao.html
+++ b/templates/missao.html
@@ -20,7 +20,7 @@
 <div class="d-flex aling-items-center">
 
 
-    <ul class="list-group list-group-light" style="margin-left: 100px; margin-right: 100px;  ">
+    <ul class="list-group list-group-light" style="margin-left: 7%; margin-right: 7%;  ">
         <li class="list-group-item border-0 fw-bold" style="font-style: italic; background-color:rgba(144,  203,  44,  0)"> O CCI foi fundado em 1996 pela Sociedade Educativa Braga e Elói Ltda, com o intuito de:</li>
         <li class="list-group-item border-0" style=" background-color:rgba(144,  203,  44,  0)">- Oferecer à comunidade um  ensino de qualidade, desde a Educação Infantil ao Ensino Médio, através de um trabalho voltado ao aperfeiçoamento sociocultural, humano, empreendedor e solidário em ambiente prazeroso.</li>
         <li class="list-group-item border-0 fw-bold" style="font-style: italic; background-color:rgba(144,  203,  44,  0)">Conheça alguns dos nossos diferenciais</li>
