--- a/templates/principios.html
+++ b/templates/principios.html
@@ -19,7 +19,7 @@
 
 <div class="d-flex aling-items-center">
 
-    <ol class="list-group list-group-light list-group-numbered " style="margin-left: 100px;">
+    <ol class="list-group list-group-light list-group-numbered " style="margin-left: 7%;">
         <li class="list-group-item item border-0" style=" background-color:rgba(144,  203,  44,  0)">Respeito à individualidade;</li>
         <li class="list-group-item item border-0" style=" background-color:rgba(144,  203,  44,  0)">Incentivo à autonomia e à criatividade;</li>
         <li class="list-group-item item border-0" style=" background-color:rgba(144,  203,  44,  0)">Formação baseada em valores éticos e cristãos;</li>
