--- a/templates/secretaria.html
+++ b/templates/secretaria.html
@@ -11,7 +11,7 @@
       <div class="row row-cols-1 row-cols-md-3 g-4" style="margin-bottom:50px; margin-left:75px; margin-right:75px;">
   <div class="col">
     <div class="card h-100" style="max-width:250px; max-height:300px; margin:auto;">
-      <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/041.webp" class="card-img-top" alt="Hollywood Sign on The Hill"/>
+      <img src="https://docs.google.com/uc?id=1_IkHuPAqRjGlw9NukxWCh5f6vl-zV4EW" class="card-img-top" alt="Hollywood Sign on The Hill"/>
       <div class="card-body">
         <h6 class="card-title text-center">Calendário Escolar 2023</h6>
         <p class="card-text text-center">Informações Detalhadas</p>
@@ -38,11 +38,12 @@
   </div>
   <div class="col">
     <div class="card h-100"style="max-width:250px; max-height:300px; margin:auto;">
-      <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/043.webp" class="card-img-top" alt="Los Angeles Skyscrapers"/>
+      <img src="https://docs.google.com/uc?id=1FKRz6Ey5WvIOTzaPIQHSiumCxJMt16pz" class="card-img-top" alt="Los Angeles Skyscrapers"/>
       <div class="card-body">
         <h6 class="card-title text-center">Materiais Escolar 2023</h6>
         <p class="card-text text-center">Lista de Materias</p>
       </div>
+      <a href="{{url_for('transportes')}}" class="stretched-link"></a>
   </div>
   </div>
 
@@ -57,6 +58,7 @@
         <h6 class="card-title text-center">Pré Inscrição PEC</h6>
         <p class="card-text text-center">Pré-inscrição para os Projetos Extracurriculares</p>
       </div>
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLSe_IqyClhGGaQfjVZO_QK4-tnvAIiLsql8Y3LC7-7BdM7bATA/viewform" class="stretched-link"></a>
     </div>
   </div>
   <div class="col">
@@ -70,13 +72,14 @@
     </div>
   </div>
   <div class="col">
-    <a class="card h-100" href="https://docs.google.com/forms/d/e/1FAIpQLSdrtLsH48jWkl2p15cjw-56xdATsbC8eSlU98KYP1AWfyOCOA/viewform?gxids=7628" style="max-width:250px; max-height:300px; margin:auto;">
+    <div class="card h-100" style="max-width:250px; max-height:300px; margin:auto;">
       <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/043.webp" class="card-img-top" alt="Los Angeles Skyscrapers"/>
       <div class="card-body">
         <h6 class="card-title text-center" >SAC CCI</h6>
         <p class="card-text text-center">Solicitações, Dúvidas, reclamações e sugestão</p>
       </div>
-  </a>
+      <a href="{{url_for('fale_conosco')}}" class="stretched-link"></a>
+    </div>
   </div>
   <div class="col">
     <div class="card h-100" style="max-width:250px; max-height:300px; margin:auto;">
