--- a/templates/funcionamento.html
+++ b/templates/funcionamento.html
@@ -18,9 +18,9 @@
 
 <div class="text-center"> <br>  <img src="../static/img/pqcci.jpg" height="600" width="800"  class="img-fluid hover-shadow" alt="Hollywood Sign on The Hill"> </div>
 
-<p class="fs-6 fw-bold" style="margin-left: 5%; margin-top: 5%;">Documentos para Matrícula em todos os níveis</p>
+<p class="fs-6 fw-bold" style="margin-left: 7%; margin-top: 7%;">Documentos para Matrícula em todos os níveis</p>
 
-<ol class="list-group list-group-light " style="margin-left: 5%;">
+<ol class="list-group list-group-light " style="margin-left: 7%;">
     <li class="list-group-item item border-0 font-monospace" style="font-size: small; padding-top: 0; padding-bottom: 0; background-color:rgba(144,  203,  44,  0)">> Comprovante de tipagem sanguínea;</li>
     <li class="list-group-item item border-0 font-monospace" style="font-size: small; padding-top: 0; padding-bottom: 0; background-color:rgba(144,  203,  44,  0)" >> Cópia da Certidão de Nascimento do aluno e, se possuir, da Carteira de Identidade e do CPF;</li>
     <li class="list-group-item item border-0 font-monospace" style="font-size: small; padding-top: 0; padding-bottom: 0; background-color:rgba(144,  203,  44,  0)">> Cópia do cartão de vacina (para crianças até 08 anos);</li>
@@ -34,10 +34,10 @@
     <li class="list-group-item item border-0 font-monospace" style="font-size: small; padding-top: 0; padding-bottom: 0; background-color:rgba(144,  203,  44,  0)">> Em caso de débito, a matrícula não será efetivada.</li>
 </ol>
 
-<p class="fs-6 fw-bold" style="margin-left: 5%; margin-top: 2%; margin-bottom: 0;">Educação Infantil</p>
-<p class="fw-bold" style="margin-left: 5%; font-size: 12px; margin-top: 0;">Valores das Mensalidades para 2023</p>
+<p class="fs-6 fw-bold" style="margin-left: 7%; margin-top: 2%; margin-bottom: 0;">Educação Infantil</p>
+<p class="fw-bold" style="margin-left: 7%; font-size: 12px; margin-top: 0;">Valores das Mensalidades para 2023</p>
 
-<table class="table table-sm table-hover table-bordered" border="2" style="max-width: 70%; margin-left: 5%; margin-bottom: 50px;">
+<table class="table table-sm table-hover table-bordered" style="max-width: 70%; margin-left: 7%; margin-bottom: 50px;">
     <thead>
       <tr>
         <th scope="col" style="text-align: center; max-width: 50px; ">Nivel</th>
@@ -54,7 +54,7 @@
         <td style="text-align: center;">R$ 819,00</td>
       </tr>
       <tr>
-        <th scope="row"  style="text-align: center; padding: 0,5%;">Taxa de Período Integral - turno contrário, sendo no vespertino até 18h20, com alimentação à parte</th>
+        <th scope="row"  style="text-align: center; padding: 0,7%;">Taxa de Período Integral - turno contrário, sendo no vespertino até 18h20, com alimentação à parte</th>
         <td style="text-align: center;">R$ 893,00</td>
         <td style="text-align: center;">R$ 863,00 </td>
         <td style="text-align: center;">R$ 819,00 </td>
@@ -74,9 +74,9 @@
     </tbody>
   </table>
 
-  <p class="fw-bold" style="margin-left: 5%; font-size: 12px; margin-top: 0; margin-bottom: 0;">Valores dos Livros para 2023</p>
+  <p class="fw-bold" style="margin-left: 7%; font-size: 12px; margin-top: 0; margin-bottom: 0;">Valores dos Livros para 2023</p>
 
-<table class="table table-sm table-hover table-bordered" border="2" style="max-width: 30%; margin-left: 5%; margin-bottom: 50px;">
+<table class="table table-sm table-hover table-bordered" style="max-width: 30%; margin-left: 7%; margin-bottom: 50px;">
     <thead>
       <tr>
         <th scope="col" style="text-align: center;" padding: 0;>Livros Sistema Positivo</th>
@@ -89,7 +89,7 @@
         <td style="text-align: center;">R$ 927,23</td>
       </tr>
       <tr>
-        <th scope="row"  style="text-align: center; padding: 0,5%;">Maternal Grupo 3</th>
+        <th scope="row"  style="text-align: center; padding: 0,7%;">Maternal Grupo 3</th>
         <td style="text-align: center;">R$ 1097,23</td>
       </tr>
       <tr>
@@ -103,9 +103,9 @@
     </tbody>
   </table>
 
-  <p class="fw-bold" style="margin-left: 5%; font-size: 12px; margin-top: 0; margin-bottom: 0;">Os livros são vendidos pela Editora Positivo na loja virtual: <a href="www.proseculo.com.br">www.proseculo.com.br.</a></p>
+  <p class="fw-bold" style="margin-left: 7%; font-size: 12px; margin-top: 0; margin-bottom: 0;">Os livros são vendidos pela Editora Positivo na loja virtual: <a href="www.proseculo.com.br">www.proseculo.com.br.</a></p>
 
-<table class="table table-sm table-hover table-bordered" border="2" style="max-width: 30%; margin-left: 5%; margin-bottom: 50px;">
+<table class="table table-sm table-hover table-bordered" style="max-width: 30%; margin-left: 7%; margin-bottom: 50px;">
     <thead>
       <tr>
         <th scope="col" style="text-align: center; padding: 0;">Lista de Materiais</th>
@@ -136,12 +136,12 @@
     </tbody>
   </table>
 
-<p class="fs-6 fw-bold" style="margin-left: 5%; margin-top: 2%; margin-bottom: 0;">Faça a pré-matrícula do seu filho,</p>
+<p class="fs-6 fw-bold" style="margin-left: 7%; margin-top: 2%; margin-bottom: 0;">Faça a pré-matrícula do seu filho,</p>
 
-<p class="fs-6 fw-bold" style="margin-left: 5%; margin-top: 2%; margin-bottom: 0;">Ensino Fundamental I e II</p>
-<p class="fw-bold" style="margin-left: 5%; font-size: 12px; margin-top: 0; margin-bottom: 0;">Valores das Mensalidades para 2023</p>
+<p class="fs-6 fw-bold" style="margin-left: 7%; margin-top: 2%; margin-bottom: 0;">Ensino Fundamental I e II</p>
+<p class="fw-bold" style="margin-left: 7%; font-size: 12px; margin-top: 0; margin-bottom: 0;">Valores das Mensalidades para 2023</p>
 
-<table class="table table-sm table-hover table-bordered" border="2" style="max-width: 70%; margin-left: 5%; margin-bottom: 50px;">
+<table class="table table-sm table-hover table-bordered" border="2" style="max-width: 70%; margin-left: 7%; margin-bottom: 50px;">
     <thead>
       <tr>
         <th scope="col" style="text-align: center; max-width: 50px; ">Nivel</th>
@@ -158,7 +158,7 @@
         <td style="text-align: center;">R$ 819,00</td>
       </tr>
       <tr>
-        <th scope="row"  style="text-align: center; padding: 0,5%;">4º ao 8º ano</th>
+        <th scope="row"  style="text-align: center; padding: 0,7%;">4º ao 8º ano</th>
         <td style="text-align: center;">R$ 993,00</td>
         <td style="text-align: center;">R$ 963,00 </td>
         <td style="text-align: center;">R$ 919,00 </td>
@@ -190,9 +190,9 @@
     </tbody>
   </table>
 
-  <p class="fw-bold" style="margin-left: 5%; font-size: 12px; margin-top: 0; margin-bottom: 0;">Valores dos Livros para 2023</p>
+  <p class="fw-bold" style="margin-left: 7%; font-size: 12px; margin-top: 0; margin-bottom: 0;">Valores dos Livros para 2023</p>
 
-  <table class="table table-sm table-hover table-bordered" border="2" style="max-width: 30%; margin-left: 5%; margin-bottom: 50px;">
+  <table class="table table-sm table-hover table-bordered" border="2" style="max-width: 30%; margin-left: 7%; margin-bottom: 50px;">
       <thead>
         <tr>
           <th scope="col" style="text-align: center;" padding: 0;>Livros Sistema Positivo</th>
@@ -205,7 +205,7 @@
           <td style="text-align: center;">R$ 1869,43</td>
         </tr>
         <tr>
-          <th scope="row"  style="text-align: center; padding: 0,5%;">3º, 4º e 5º ano </th>
+          <th scope="row"  style="text-align: center; padding: 0,7%;">3º, 4º e 5º ano </th>
           <td style="text-align: center;">R$ 2069,43 <br> Já incluso o do PES</td>
         </tr>
         <tr>
@@ -219,10 +219,10 @@
       </tbody>
     </table>
 
-    <p class="fw-bold" style="margin-left: 5%; font-size: 13px; margin-top: 0; margin-bottom: 0;">Os livros do 1º ao 8º ano são vendidos pela Editora Positivo na loja virtual:</a></p>
-    <p class="fw-bold" style="margin-left: 5%; font-size:12px; margin-bottom:0;">*Livro vendido na Secretaria de Atendimento do CCI. </p>
+    <p class="fw-bold" style="margin-left: 7%; font-size: 13px; margin-top: 0; margin-bottom: 0;">Os livros do 1º ao 8º ano são vendidos pela Editora Positivo na loja virtual:</a></p>
+    <p class="fw-bold" style="margin-left: 7%; font-size:12px; margin-bottom:0;">*Livro vendido na Secretaria de Atendimento do CCI. </p>
 
-    <table class="table table-sm table-hover table-bordered" border="2" style="max-width: 30%; margin-left: 5%; margin-bottom: 50px;">
+    <table class="table table-sm table-hover table-bordered" border="2" style="max-width: 30%; margin-left: 7%; margin-bottom: 50px;">
         <thead>
           <tr>
             <th scope="col" style="text-align: center; padding: 0;">Lista de Materiais</th>
@@ -265,12 +265,12 @@
         </tbody>
       </table>
 
-      <p class="fs-6 fw-bold" style="margin-left: 5%; margin-top: 2%; margin-bottom: 0;">Faça a pré-matrícula do seu filho,</p>
+      <p class="fs-6 fw-bold" style="margin-left: 7%; margin-top: 2%; margin-bottom: 0;">Faça a pré-matrícula do seu filho,</p>
 
-      <p class="fs-6 fw-bold" style="margin-left: 5%; margin-top: 2%; margin-bottom: 0;">9º ano Pré-Médio e Ensino Médio</p>
-      <p class="fw-bold" style="margin-left: 5%; font-size: 12px; margin-top: 0; margin-bottom: 0;">Valores das Mensalidades para 2023</p>
+      <p class="fs-6 fw-bold" style="margin-left: 7%; margin-top: 2%; margin-bottom: 0;">9º ano Pré-Médio e Ensino Médio</p>
+      <p class="fw-bold" style="margin-left: 7%; font-size: 12px; margin-top: 0; margin-bottom: 0;">Valores das Mensalidades para 2023</p>
 
-      <table class="table table-sm table-hover table-bordered" border="2" style="max-width: 70%; margin-left: 5%; margin-bottom: 50px;">
+      <table class="table table-sm table-hover table-bordered" border="2" style="max-width: 70%; margin-left: 7%; margin-bottom: 50px;">
         <thead>
           <tr>
             <th scope="col" style="text-align: center; max-width: 50px; ">Nivel</th>
@@ -287,7 +287,7 @@
             <td style="text-align: center;">R$ 1019,00 </td>
           </tr>
           <tr>
-            <th scope="row"  style="text-align: center; padding: 0,5%;">EM1ª, 2ª e 3ª série (Formação Geral Básica no matutino) com um Itinerário ou um Técnico em horários específicos</th>
+            <th scope="row"  style="text-align: center; padding: 0,7%;">EM1ª, 2ª e 3ª série (Formação Geral Básica no matutino) com um Itinerário ou um Técnico em horários específicos</th>
             <td style="text-align: center;">R$ 1093,00</td>
             <td style="text-align: center;">R$ 1063,00</td>
             <td style="text-align: center;">R$ 1019,00</td>
@@ -295,9 +295,9 @@
         </tbody>
       </table>
 
-      <p class="fw-bold" style="margin-left: 5%; font-size: 12px; margin-top: 0; margin-bottom: 0;">Valores dos Livros para 2023</p>
+      <p class="fw-bold" style="margin-left: 7%; font-size: 12px; margin-top: 0; margin-bottom: 0;">Valores dos Livros para 2023</p>
 
-      <table class="table table-sm table-hover table-bordered" border="2" style="max-width: 30%; margin-left: 5%; margin-bottom: 50px;">
+      <table class="table table-sm table-hover table-bordered" border="2" style="max-width: 30%; margin-left: 7%; margin-bottom: 50px;">
           <thead>
             <tr>
               <th scope="col" style="text-align: center;" padding: 0;>Livros Sistema Positivo</th>
@@ -310,7 +310,7 @@
               <td style="text-align: center;">R$ 2199,43 <br> Já inclusos o do PES e o de Educação Financeira</td>
             </tr>
             <tr>
-              <th scope="row"  style="text-align: center; padding: 0,5%;">Livro de Inglês PES - 9º ano</th>
+              <th scope="row"  style="text-align: center; padding: 0,7%;">Livro de Inglês PES - 9º ano</th>
               <td style="text-align: center;">R$ 347,23</td>
             </tr>
             <tr>
@@ -320,9 +320,9 @@
           </tbody>
         </table>
 
-        <p class="fw-bold" style="margin-left: 5%; font-size: 12px; margin-top: 0; margin-bottom: 0;">Os livros são vendidos pela Editora Positivo na loja virtual: <a href="www.proseculo.com.br">www.proseculo.com.br.</a></p>
+        <p class="fw-bold" style="margin-left: 7%; font-size: 12px; margin-top: 0; margin-bottom: 0;">Os livros são vendidos pela Editora Positivo na loja virtual: <a href="www.proseculo.com.br">www.proseculo.com.br.</a></p>
 
-<table class="table table-sm table-hover table-bordered" border="2" style="max-width: 30%; margin-left: 5%; margin-bottom: 50px;">
+<table class="table table-sm table-hover table-bordered" border="2" style="max-width: 30%; margin-left: 7%; margin-bottom: 50px;">
     <thead>
       <tr>
         <th scope="col" style="text-align: center; padding: 0;">Lista de Materiais</th>
@@ -343,12 +343,12 @@
   </table>
 
 
-  <p class="fs-6 fw-bold" style="margin-left: 5%; margin-top: 1%; margin-bottom: 0;">Faça a pré-matrícula do seu filho,</p>
+  <p class="fs-6 fw-bold" style="margin-left: 7%; margin-top: 1%; margin-bottom: 0;">Faça a pré-matrícula do seu filho,</p>
 
-  <p class="fs-5 fw-bold" style="margin-left: 5%; margin-top: 2%; margin-bottom: 0;">Faculdade</p>
-  <p class="fw-bold" style="margin-left: 5%; font-size: 12px; margin-top: 0; margin-bottom: 0;">Valores das Mensalidades para 2023</p>
+  <p class="fs-7 fw-bold" style="margin-left: 7%; margin-top: 2%; margin-bottom: 0;">Faculdade</p>
+  <p class="fw-bold" style="margin-left: 7%; font-size: 12px; margin-top: 0; margin-bottom: 0;">Valores das Mensalidades para 2023</p>
 
-  <table class="table table-sm table-hover table-bordered" border="2" style="max-width: 40%; margin-left: 5%; margin-bottom: 50px;">
+  <table class="table table-sm table-hover table-bordered" border="2" style="max-width: 40%; margin-left: 7%; margin-bottom: 50px;">
     <thead>
       <tr>
         <th scope="col" style="text-align: center; max-width: 50px; ">Cursos</th>
@@ -363,7 +363,7 @@
         <td style="text-align: center;">R$ 799,00</td>
       </tr>
       <tr>
-        <th scope="row"  style="text-align: center; padding: 0,5%;">Bacharel em Administração</th>
+        <th scope="row"  style="text-align: center; padding: 0,7%;">Bacharel em Administração</th>
         <td style="text-align: center;">R$ 5394,00</td>
         <td style="text-align: center;">R$ 899,00</td>
       </tr>
@@ -385,6 +385,6 @@
     </tbody>
   </table>
 
-  <p class="fs-6 fw-bold" style="margin-left: 5%; margin-top: 2%; margin-bottom: 3%;">Outras informações sobre Vestibular, Transferência, 2ª Graduação, Pós-Graduação, entre outros, acesse <a href="https://www.faculdadecci.com.br/">https://www.faculdadecci.com.br</a></p>
+  <p class="fs-6 fw-bold" style="margin-left: 7%; margin-top: 2%; margin-bottom: 3%;">Outras informações sobre Vestibular, Transferência, 2ª Graduação, Pós-Graduação, entre outros, acesse <a href="https://www.faculdadecci.com.br/">https://www.faculdadecci.com.br</a></p>
 
 {% endblock conteudo %}
