--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -45,7 +45,7 @@
     <div class="card h-100" style="max-width:250px; max-height:250px; margin:auto;">
       <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/042.webp" class="card-img-top" alt="Palm Springs Road"/>
       <div class="card-body">
-        <h6 class="card-title text-center" style="">Destaques</h6>
+        <h6 class="card-title text-center">Destaques</h6>
         <p class="card-text text-center">Destaques</p>
       </div>
       <a href="#" class="stretched-link"></a>
@@ -55,7 +55,7 @@
     <div class="card h-100" style="max-width:250px; max-height:250px; margin:auto;">
       <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/042.webp" class="card-img-top" alt="Palm Springs Road"/>
       <div class="card-body">
-        <h6 class="card-title text-center" style="">Destaques</h6>
+        <h6 class="card-title text-center">Destaques</h6>
         <p class="card-text text-center">Destaques</p>
       </div>
       <a href="#" class="stretched-link"></a>
@@ -92,7 +92,7 @@
     <div class="card h-100" style="max-width:250px; max-height:250px; margin:auto;">
       <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/042.webp" class="card-img-top" alt="Palm Springs Road"/>
       <div class="card-body">
-        <h6 class="card-title text-center" style="">Destaques</h6>
+        <h6 class="card-title text-center">Destaques</h6>
         <p class="card-text text-center">Destaques</p>
       </div>
       <a href="#" class="stretched-link"></a>
@@ -122,7 +122,7 @@
     <div class="card h-100" style="max-width:250px; max-height:250px; margin:auto;">
       <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/042.webp" class="card-img-top" alt="Palm Springs Road"/>
       <div class="card-body">
-        <h6 class="card-title text-center" style="">Destaques</h6>
+        <h6 class="card-title text-center">Destaques</h6>
         <p class="card-text text-center">Destaques</p>
       </div>
       <a href="#" class="stretched-link"></a>
