--- a/templates/secretaria.html
+++ b/templates/secretaria.html
@@ -11,7 +11,7 @@
       <div class="row row-cols-1 row-cols-md-3 g-4" style="margin-bottom:50px; margin-left:75px; margin-right:75px;">
   <div class="col">
     <div class="card h-100" style="max-width:250px; max-height:300px; margin:auto;">
-      <img src="https://docs.google.com/uc?id=1_IkHuPAqRjGlw9NukxWCh5f6vl-zV4EW" class="card-img-top" alt="Hollywood Sign on The Hill"/>
+      <img src="https://docs.google.com/uc?id=1_IkHuPAqRjGlw9NukxWCh5f6vl-zV4EW" class="card-img-top"/>
       <div class="card-body">
         <h6 class="card-title text-center">Calendário Escolar 2023</h6>
         <p class="card-text text-center">Informações Detalhadas</p>
@@ -20,16 +20,17 @@
   </div>
   <div class="col">
     <div class="card h-100" style="max-width:250px; max-height:300px; margin:auto;">
-      <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/042.webp" class="card-img-top" alt="Palm Springs Road"/>
+      <img src="https://docs.google.com/uc?id=1XYdaMXJTV3Qtc6MW_jIMJD7zcP5hlTji" class="card-img-top"/>
       <div class="card-body">
-        <h6 class="card-title text-center" style="">Matriculas 2023</h6>
+        <h6 class="card-title text-center">Matriculas 2023</h6>
         <p class="card-text text-center">Informações Gerais.</p>
       </div>
+      <a href="{{url_for('funcionamento')}}" class="stretched-link"></a>
     </div>
   </div>
   <div class="col">
     <div class="card h-100" style="max-width:250px; max-height:300px; margin:auto;">
-      <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/043.webp" class="card-img-top" alt="Los Angeles Skyscrapers"/>
+      <img src="https://docs.google.com/uc?id=18LE5_F-CFD_A4BC4Q3xb-NtYsOY3oojT" class="card-img-top"/>
       <div class="card-body">
         <h6 class="card-title text-center">Horário de Atendimento</h6>
         <p class="card-text text-center">Informações de horários</p>
@@ -53,7 +54,7 @@
       <div class="row row-cols-1 row-cols-md-3 g-4" style="margin-bottom:50px; margin-left:75px; margin-right:75px;">
   <div class="col">
     <div class="card h-100" style="max-width:250px; max-height:300px; margin:auto;">
-      <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/041.webp" class="card-img-top" alt="Hollywood Sign on The Hill"/>
+      <img src="https://docs.google.com/uc?id=1ELEO1tj0UZbfmntNK5oEwJhzftQfOYm0" class="card-img-top" alt="Hollywood Sign on The Hill"/>
       <div class="card-body">
         <h6 class="card-title text-center">Pré Inscrição PEC</h6>
         <p class="card-text text-center">Pré-inscrição para os Projetos Extracurriculares</p>
@@ -63,7 +64,7 @@
   </div>
   <div class="col">
     <div class="card h-100" style="max-width:250px; max-height:300px; margin:auto;">
-      <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/042.webp" class="card-img-top" alt="Palm Springs Road"/>
+      <img src="https://docs.google.com/uc?id=1aE2HgaQ-cwJgFCUPwCEYKI1cNaXku-Qo" class="card-img-top" alt="Palm Springs Road"/>
       <div class="card-body">
         <h5 class="card-title text-center" >Transportes</h5>
         <p class="card-text text-center">Transportes Escolar 2023</p>
@@ -73,7 +74,7 @@
   </div>
   <div class="col">
     <div class="card h-100" style="max-width:250px; max-height:300px; margin:auto;">
-      <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/043.webp" class="card-img-top" alt="Los Angeles Skyscrapers"/>
+      <img src="https://docs.google.com/uc?id=1QRQ0FTfmfZqSfx1YXe_lCmV06O0gQA1c" class="card-img-top" alt="Los Angeles Skyscrapers"/>
       <div class="card-body">
         <h6 class="card-title text-center" >SAC CCI</h6>
         <p class="card-text text-center">Solicitações, Dúvidas, reclamações e sugestão</p>
@@ -83,7 +84,7 @@
   </div>
   <div class="col">
     <div class="card h-100" style="max-width:250px; max-height:300px; margin:auto;">
-      <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/043.webp" class="card-img-top" alt="Los Angeles Skyscrapers"/>
+      <img src="https://docs.google.com/uc?id=1iAgUuSqKkYErE03GIfoANFiSEwUkeQ1-" class="card-img-top" alt="Los Angeles Skyscrapers"/>
       <div class="card-body">
         <h5 class="card-title text-center">Vendas de Livros</h5>
         <p class="card-text text-center">Venda de livros Editora Positivo </p>
