--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -36,110 +36,54 @@
 <br>
 <br>
 
-<div id="carouselExampleControls2" class="carousel slide" data-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <div class="row row-cols-1 row-cols-md-3 g-4" style="margin-bottom:50px; margin-left:75px; margin-right:75px;">
+<div class="row row-cols-1 row-cols-md-3 g-4" style="margin-bottom:50px; margin-left:75px; margin-right:75px;">
 
   <div class="col">
-    <div class="card h-100" style="max-width:250px; max-height:250px; margin:auto;">
-      <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/042.webp" class="card-img-top" alt="Palm Springs Road"/>
+    <div class="card h-100" style="max-width:250px; max-height:350px; margin:auto;">
+      <img src="https://docs.google.com/uc?id=1RF_RD7aTGgHf1uixOQbiE38Pxch_q2bt" class="card-img-top"/>
       <div class="card-body">
-        <h6 class="card-title text-center">Destaques</h6>
-        <p class="card-text text-center">Destaques</p>
+        <h6 class="card-title text-center">Concerto Sinfônico</h6>
+        <p class="card-text text-center" style="margin-top: 0px;">Corporação Musical Apresenta Orquestra em comemoração aos nossos 25 anos</p>
       </div>
-      <a href="#" class="stretched-link"></a>
+      <a href="https://photos.google.com/share/AF1QipO5qO4GK1UH1NLdXTjo9ceHdiRW3ZqFFxunjKa8bkTYp5BIUjuIZnigE4qP2SIDmA?key=SmRmTVhvdEJyMzk1X1E5VUhTSHV0SWhLaE43c3dR" class="stretched-link"></a>
     </div>
   </div>
 <div class="col">
-    <div class="card h-100" style="max-width:250px; max-height:250px; margin:auto;">
-      <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/042.webp" class="card-img-top" alt="Palm Springs Road"/>
+    <div class="card h-100" style="max-width:250px; max-height:350px; margin:auto;">
+      <img src="https://docs.google.com/uc?id=1hWBQ2AsxbbLnwsKjbPYQtPZIe9rk5cOK" class="card-img-top" />
       <div class="card-body">
-        <h6 class="card-title text-center">Destaques</h6>
-        <p class="card-text text-center">Destaques</p>
+        <h6 class="card-title text-center">Conferência da ONU...EM2ª série</h6>
+        <p class="card-text text-center">Simulação de evento mundial discute temas apontados pela Assembleia das Nações Unidas</p>
       </div>
-      <a href="#" class="stretched-link"></a>
+      <a href="https://photos.google.com/share/AF1QipNacY3L6ct89-ttOdj5s0-sfGQtjqAtGl1DgWvrTq-j5tBPVo8iXX-_sSdK4yqzfw?key=REhhZEZEZEVzUlA2WFFUOG93SlFuZ3A4OWVsOVRB" class="stretched-link"></a>
     </div>
   </div>
 
   <div class="col">
-    <div class="card h-100" style="max-width:250px; max-height:250px; margin:auto;">
-      <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/043.webp" class="card-img-top" alt="Los Angeles Skyscrapers"/>
+    <div class="card h-100" style="max-width:250px; max-height:350px; margin:auto;">
+      <img src="https://docs.google.com/uc?id=1glKUcJP_15k5uAmPz48ATXAUiBpgwQXx" class="card-img-top"/>
       <div class="card-body">
-        <h6 class="card-title text-center">Destaques</h6>
-        <p class="card-text text-center">Destaques</p>
+        <h6 class="card-title text-center">Reunião de Encerramento...</h6>
+        <p class="card-text text-center">Apresentações finalizam as atividades letivas e expressam nossa gratidão às famílias</p>
       </div>
-      <a href="#" class="stretched-link"></a>
+      <a href="https://photos.app.goo.gl/sRqvDh7AwV5rhYF67" class="stretched-link"></a>
   </div>
   </div>
   <div class="col">
-    <div class="card h-100"style="max-width:250px; max-height:250px; margin:auto;">
-      <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/043.webp" class="card-img-top" alt="Los Angeles Skyscrapers"/>
+    <div class="card h-100"style="max-width:250px; max-height:350px; margin:auto;">
+      <img src="https://docs.google.com/uc?id=1rx2Hgcm-XjtvY3domgGxmlBo6gWiLEGR" class="card-img-top"/>
       <div class="card-body">
-        <h6 class="card-title text-center">Destaques</h6>
-        <p class="card-text text-center">Destaques</p>
+        <h6 class="card-title text-center">Formatura do Jardim 2...</h6>
+        <p class="card-text text-center">Cerimônia de término da Educação Infantil homenageia as crianças com entrega dos diplomas</p>
       </div>
-      <a href="#" class="stretched-link"></a>
+      <a href="https://photos.google.com/share/AF1QipNY99Z1aLn9-elSNpaTPHxsybcBCD48XqKDH6V05Cjt1grwBp026PuC_SZHuMvAuA?key=VTN6Rk1zLXF3Z1djVmNCbW11blN2MmQ2MElUUnVn" class="stretched-link"></a>
   </div>
 
   </div>
 
   </div>
     </div>
-    <div class="carousel-item">
-      <div class="row row-cols-1 row-cols-md-3 g-4" style="margin-bottom:50px; margin-left:75px; margin-right:75px;">
-  <div class="col">
-    <div class="card h-100" style="max-width:250px; max-height:250px; margin:auto;">
-      <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/042.webp" class="card-img-top" alt="Palm Springs Road"/>
-      <div class="card-body">
-        <h6 class="card-title text-center">Destaques</h6>
-        <p class="card-text text-center">Destaques</p>
-      </div>
-      <a href="#" class="stretched-link"></a>
-    </div>
-  </div>
-  <div class="col">
-    <div class="card h-100" href="https://docs.google.com/forms/d/e/1FAIpQLSdrtLsH48jWkl2p15cjw-56xdATsbC8eSlU98KYP1AWfyOCOA/viewform?gxids=7628" style="max-width:250px; max-height:250px; margin:auto;">
-      <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/043.webp" class="card-img-top" alt="Los Angeles Skyscrapers"/>
-      <div class="card-body">
-        <h6 class="card-title text-center" >Destaques</h6>
-        <p class="card-text text-center">Destaques</p>
-      </div>
-      <a href="#" class="stretched-link"></a>
-  </div>
-  </div>
-  <div class="col">
-    <div class="card h-100" style="max-width:250px; max-height:250px; margin:auto;">
-      <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/043.webp" class="card-img-top" alt="Los Angeles Skyscrapers"/>
-      <div class="card-body">
-        <h6 class="card-title text-center">Destaques</h6>
-        <p class="card-text text-center">Destaques</p>
-      </div>
-      <a href="#" class="stretched-link"></a>
-  </div>
-  </div>
-  <div class="col">
-    <div class="card h-100" style="max-width:250px; max-height:250px; margin:auto;">
-      <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/042.webp" class="card-img-top" alt="Palm Springs Road"/>
-      <div class="card-body">
-        <h6 class="card-title text-center">Destaques</h6>
-        <p class="card-text text-center">Destaques</p>
-      </div>
-      <a href="#" class="stretched-link"></a>
-    </div>
-  </div>
-
-  </div>
-    </div>
-  </div>
-  <a class="carousel-control-prev" href="#carouselExampleControls2" role="button" data-slide="prev">
-    <span class="fas fa-angle-left" style="font-size: 30px; margin-right:10px;" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </a>
-  <button class="carousel-control-next" href="#carouselExampleControls2" role="button" data-slide="next">
-    <span class="fas fa-angle-right" style="font-size: 30px; margin-left:10px;" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
+  
 </div>
 
 
