--- a/templates/secretaria.html
+++ b/templates/secretaria.html
@@ -35,6 +35,7 @@
         <h6 class="card-title text-center">Horário de Atendimento</h6>
         <p class="card-text text-center">Informações de horários</p>
       </div>
+      <a href="#!" class="stretched-link"></a>
   </div>
   </div>
   <div class="col">
@@ -44,7 +45,7 @@
         <h6 class="card-title text-center">Materiais Escolar 2023</h6>
         <p class="card-text text-center">Lista de Materias</p>
       </div>
-      <a href="{{url_for('transportes')}}" class="stretched-link"></a>
+      <a href="https://drive.google.com/drive/folders/1d0g6JYd33IsvOmstmR5rFlF0IW6VeuqE?usp=sharing" class="stretched-link"></a>
   </div>
   </div>
 
@@ -79,7 +80,7 @@
         <h6 class="card-title text-center" >SAC CCI</h6>
         <p class="card-text text-center">Solicitações, Dúvidas, reclamações e sugestão</p>
       </div>
-      <a href="{{url_for('fale_conosco')}}" class="stretched-link"></a>
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLSdrtLsH48jWkl2p15cjw-56xdATsbC8eSlU98KYP1AWfyOCOA/viewform?gxids=7628" class="stretched-link"></a>
     </div>
   </div>
   <div class="col">
